[package]
name = "fsmap"
version = "0.3.0"
authors = ["Berke Durak <bd@exhrd.fr>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "File system mapper and search tool"
repository = "https://github.com/berke/fsmap"
rust-version = "1.72"

[dependencies]
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "^0.15" }
pico-args = { version = "^0.5" }
regex = { version = "^1" }
rustyline = { version = "^14.0.0" }
libc = { version = "0.2" }
log = { version = "0.4.21",features = ["std"] }
env_logger = { version = "0.11",default-features = false,features = ["auto-color","humantime"] }
tz-rs = "0.6.14"
